[workspace]
resolver = "2"
members = ["gmq-proxy", "gmq-remoting"]

[workspace.dependencies]
once_cell = "1.19.0"
parking_lot = "0.12.3"
prost = "0.13.1"
prost-types = "0.13.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tonic = "0.12.3"
tower = "0.4.13"
async-stream = "0.3.6"
tokio-stream = "0.1.10"
tonic-build = "0.12.3"
thiserror = "1.0.10"
anyhow = "1.0.68"
tokio-util = "0.7.13"
