[package]
name = "gmq-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = { workspace = true }
parking_lot = { workspace = true }
prost.workspace = true
prost-types.workspace = true 
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true 
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
tower.workspace = true
async-stream.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true
gmq-remoting = { path = "../gmq-remoting" }
anyhow.workspace = true

[build-dependencies]
tonic-build.workspace = true 